build with first 4 searches and intro

--- a/Drug_Search.ipynb
+++ b/Drug_Search.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f7f7135",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9092f6bd-e41f-41ca-853d-c3d4073fe9f1",
    "metadata": {},
    "outputs": [],
@@ -150,10 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b5dfe676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following drugs are among the 724 drugs approved for the market in the US: ['010', '017', '032', '05X', '07J', '08D', '08H', '08J', '08Y', '09L']\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"The following drugs are among the {len(result_drugs)} drugs approved for the market in the {country}:\", result_drugs[0:10])"
    ]
@@ -170,22 +178,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7a24ff14",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Downloading a file from our list:\n",
     "\n",
-    "test_validation = requests.get(f'https://files.rcsb.org/ligands/download/{result_drugs[0]}_ideal.mol2')"
+    "test_validation = requests.get(f'https://files.rcsb.org/ligands/download/{result_drugs[0]}.cif')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b7043e37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check to see that the file downloaded properly. A status code of 200 means everything is okay.\n",
     "\n",
@@ -214,7 +233,7 @@
     "# make a ligands folder for our results. If this ligands folder already exists, then it doesn't create a new one\n",
     "os.makedirs(\"ligands\", exist_ok=True)\n",
     "\n",
-    "with open(f\"ligands/{result_drugs[0]}_ideal.mol2\", \"w+\") as file:\n",
+    "with open(f\"ligands/{result_drugs[0]}.c\", \"w+\") as file:\n",
     "    file.write(test_validation.text)"
    ]
   },
