potential intro markdown fix + ligands cleanup

--- a/Ligands.ipynb
+++ b/Ligands.ipynb
@@ -254,9 +254,7 @@
     "\n",
     "##print(len(linkedligandqueryresult))\n",
     "# to use this statement, remove the two pound symbols\n",
-    "# this statement will show the number of results within the query parameters\n",
-    "\n",
-    "###*note to victoria -- add more possible things to DO with the results*"
+    "# this statement will show the number of results within the query parameters"
    ]
   },
   {
@@ -311,9 +309,7 @@
     "\n",
     "##print(len(ligandofinterestresult))\n",
     "# to use this statement, remove the two pound symbols\n",
-    "# this statement will show the number of results within the query parameters\n",
-    "\n",
-    "###*note to victoria -- add more possible things to DO with the results*"
+    "# this statement will show the number of results within the query parameters"
    ]
   },
   {
@@ -402,9 +398,7 @@
     "\n",
     "##print(len(bindingaffinityresult))\n",
     "# to use this statement, remove the two pound symbols\n",
-    "# this statement will show the number of results within the query parameters\n",
-    "\n",
-    "###*note to victoria -- add more possible things to DO with the results*"
+    "# this statement will show the number of results within the query parameters"
    ]
   },
   {
@@ -498,26 +492,6 @@
     "# this statement will show the number of results within the query parameters\n",
     "\n",
     "###*note to victoria -- add more possible things to DO with the results*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be1356d1",
-   "metadata": {},
-   "source": [
-    "## Next Steps and Combining Searches\n",
-    "\n",
-    "Now that you have a baseline for the different kinds of search parameters you can do surrounding ligands, it's time to apply it! First and foremost, this can be done through stacking the different ligand search types.\n",
-    "\n",
-    "*** EXAMPLE HERE ***\n",
-    "\n",
-    "Furthermore, you can take these searches and add them onto other PDB advanced searches.\n",
-    "\n",
-    "OUTPUTS\n",
-    "\n",
-    "*** EXAMPLE HERE ***\n",
-    "\n",
-    "+ information about what to do with the output stuff"
    ]
   },
   {
